[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://healthbar/HealthBar.tscn" type="PackedScene" id=2]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10.3594, 2.52783 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="SightView" type="RayCast2D" parent="."]
position = Vector2( 0.732517, 6.3485 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 2

[node name="AttackRange" type="RayCast2D" parent="."]
position = Vector2( 0.732517, 6.3485 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
position = Vector2( -12.3515, -7.11782 )
scale = Vector2( 0.15, 0.2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="died" from="HealthBar" to="." method="_on_HealthBar_died"]
